<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Yellr</string>

    <!-- Font Awesome Icons -->
    <string name="fa_camera"></string>
    <string name="fa_video_camera"></string>
    <string name="fa_microphone"></string>
    <string name="fa_upload"></string>
    <string name="fa_comment"></string>
    <string name="fa_comment_o"></string>
    <string name="fa_comments"></string>
    <string name="fa_comments_o"></string>
    <string name="fa_question"></string>
    <string name="fa_question_circle"></string>
    <string name="fa_user"></string>
    <string name="fa_pencil"></string>
    <string name="fa_user_secret"></string>
    <string name="fa_user_plus"></string>
    <string name="fa_check_square"></string>
    <string name="fa_times"></string>
    <string name="fa_key"></string>
    <string name="fa_random"></string>
    <string name="fa_eye"></string>
    <string name="fa_chevron_left_circle"></string>
    <string name="fa_up_vote"></string>
    <string name="fa_down_vote"></string>
    <string name="fa_star"></string>
    <string name="fa_envelope_o"></string>

    <!-- Dialogs -->
    <string name="about_yellr_first">
        Welcome to Yellr
    </string>
    <string name="about_yellr_second">
        Yellr is a community engagement platform that allows anyone to post what\'s on their mind, securely, and truly anonymously - not even Yellr knows who you are.
    </string>
    <string name="about_yellr_third">
        See what others in your community are saying, and what\'s important to them.  View the current questions that community leaders are asking, and post your thoughts!
    </string>
    <string name="about_yellr_fourth">
        Vote on local posts to show those in your community what is really important to you!
    </string>

    <string name="about_post_first">
        About posting ...
    </string>

    <string name="about_post_second">
        Your post will be approved by a moderator shortly.
    </string>

    <string name="about_post_third">
        Once approved, others will be able to see it in their local feed!
    </string>

    <string name="about_post_fourth">
        Your post will be licenced under the Creative Commons CC BY-SA license.
    </string>

    <!-- General -->
    <string name="time_ago">ago</string>

    <!-- Home Action Buttons -->
    <string name="action_notification">Notifications</string>
    <string name="action_messages">Messages</string>
    <string name="action_profile">Profile</string>
    <string name="action_new_post">New Post</string>

    <!-- Splash -->
    <string name="activity_splash_title">Yellr</string>
    <string name="activity_splash_tag_line">Report for your community</string>

    <!-- Local Posts -->
    <string name="fragment_local_posts_title">Local</string>
    <string name="anonymous_user">Anonymous User</string>

    <!-- View Posts -->
    <string name="activity_view_post_title">Post</string>

    <!-- Assignments -->
    <string name="fragment_assignments_title">Assignments</string>

    <!-- Stories -->
    <string name="fragment_stories_title">Stories</string>

    <!-- View Story -->
    <string name="title_activity_view_story">Yellr</string>

    <!-- View Assignment -->
    <string name="organization_label">Organization: </string>
    <string name="title_activity_view_assignment">Assignment</string>
    <string name="view_assignment_contribute">Contribute</string>

    <!-- Notifications -->
    <string name="title_activity_notifications">Notifications</string>

    <!-- Messages -->
    <string name="title_activity_messages">Messages</string>

    <!-- Poll -->
    <string name="activity_poll_title">Poll</string>
    <string name="frag_poll_title">Poll</string>

    <!-- Post -->
    <string name="activity_post_title">New Post</string>
    <string name="frag_post_anonymous">All posts are anonymous.</string>
    <string name="frag_post_default_text">Tell us about your community</string>
    <string name="frag_post_media_text">Add media:</string>
    <string name="frag_post_submit_button">Submit</string>
    <string name="frag_post_assignment_title">Free Post</string>
    <string name="frag_post_assignment_description">You can tell us what you think on any topic!</string>
    <string name="frag_post_toast_sending_post">Sending post ...</string>

    <!-- Profile -->
    <string name="activity_profile_title">Profile</string>
    <string name="frag_profile_posts_description">Posts</string>
    <string name="frag_profile_viewed_posts_description">Posts Viewed</string>
    <string name="frag_profile_used_posts_description">Posts Used</string>
    <string name="frag_profile_action_signup">Sign Up</string>
    <string name="frag_profile_action_new_uuid">New UUID</string>

    <!-- location -->
    <string name="activity_location_title">Set A Location</string>
    <string name="frag_location_info_text">Yellr uses location to send you assignments and stories.  Enter the zipcode you would like to set as your home location.</string>

    <!-- <string name="action_settings">Settings</string> -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="report_post">Report Post</string>

</resources>
