<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:theme="@style/Theme.Yellr"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yellr.net.yellr_android.activities.PostActivity$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/frag_post_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/frag_post_assignment_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frag_poll_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"/>

        <Button
            android:id="@+id/frag_post_submit_button"
            android:text="@string/frag_post_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellr_button"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/frag_post_assignment_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_post_assignment_description"
        android:textSize="16sp"
        android:layout_below="@+id/frag_post_top_container"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/frag_poll_container"
        android:layout_below="@+id/frag_post_assignment_description">
    </LinearLayout>

</RelativeLayout>

    <!--<ImageView
        android:id="@+id/frag_post_image_preview"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/frag_post_edit_text"/>-->

    <!--<VideoView
        android:id="@+id/frag_post_video_preview"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/frag_post_edit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/frag_post_audio_container">
    </LinearLayout>-->