<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <!--
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/frag_view_post_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="12sp"
                    android:text="Anonymous User"
                    android:textColor="@color/grey"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    />

                <TextView
                    android:id="@+id/frag_view_post_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"
                    android:text="14d"
                    android:textColor="@color/grey"
                    android:layout_marginTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/frag_view_post_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Response: Tell us about your community ..."
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:paddingBottom="2dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/frag_view_post_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Loading Post ..."
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_marginBottom="3dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />

            <ImageView
                android:id="@+id/frag_view_post_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp">
                <VideoView
                    android:id="@+id/frag_view_post_video_inner"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:paddingTop="20dp"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/audio_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/songDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="songDuration" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/media_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_pause" />

                    <ImageButton
                        android:id="@+id/media_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_play" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/frag_view_post_full_datetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:text="Post Date/Time"
                />

            <LinearLayout
                android:id="@+id/frag_view_post_voting_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <Button
                    android:id="@+id/frag_view_post_button_up_vote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="32sp"
                    android:text="@string/fa_up_vote"
                    android:textColor="@color/light_grey"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:background="?android:attr/selectableItemBackground"
                    />

                <TextView
                    android:id="@+id/frag_view_post_up_vote_count"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="17"
                    android:textColor="@color/up_vote_green"
                    android:paddingTop="0dp"
                    android:paddingBottom="2dp"
                    />

                <TextView
                    android:id="@+id/frag_view_post_down_vote_count"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="-5"
                    android:textColor="@color/down_vote_red"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    />

                <Button
                    android:id="@+id/frag_view_post_button_down_vote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="32sp"
                    android:text="@string/fa_down_vote"
                    android:textColor="@color/light_grey"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:background="?android:attr/selectableItemBackground"
                    />
            </LinearLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/report_this_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/report_post"
                    android:textColor="#0000FF"
                    android:background="?android:attr/selectableItemBackground"
                    />

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>



    <!--
    </LinearLayout>
    -->

</RelativeLayout>